fix: se elimina parametro
